<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryDark"
    tools:context=".view.SimulatorFragment">

    <LinearLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@color/colorSecondaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center_horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation_title_text"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation_total_amount_text"
                android:textSize="@dimen/estate_title_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/amount_borrowed_edit_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:inputType="number"
                tools:hint="200 000 €"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation_customer_bring_text"
                android:textSize="@dimen/estate_title_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bring_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:inputType="number"
                tools:hint="50 000 €"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation_rate_text"
                android:textSize="@dimen/estate_title_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rate_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:inputType="numberDecimal"
                tools:hint="2.2%"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation_duration_text"
                android:textSize="@dimen/estate_title_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/duration_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:inputType="number"
                tools:hint="10 ans"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation_result_text"
                android:textSize="@dimen/estate_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                tools:text="Mensualité de 1 000 € par mois" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>